fix: set higher z-index for fullscreen loader

--- a/src/components/common/fullScreenLoader/FullScreenLoader.module.scss
+++ b/src/components/common/fullScreenLoader/FullScreenLoader.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 200;
+  z-index: 1500;
   width: 100vw;
   height: 100vh;
 
